[package]
name = "elementsd-tests"
version = "0.1.0"
authors = ["Andrew Poelstra <apoelstra@wpsoftware.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.13.0"
bitcoin = "0.30.0"
elements = {path = "../"}
elementsd = "0.8.0"
rand = "0.8"

