[package]
name = "elementsd-tests"
version = "0.1.0"
authors = ["Andrew Poelstra <apoelstra@wpsoftware.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitcoin = "0.32.2"
elements = {path = "../", features = ["base64"]}
elementsd = "0.11.0"
rand = "0.8"

